--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <lombok.version>1.18.22</lombok.version>
         <slf4j.version>2.0.0-alpha7</slf4j.version>
         <log4j.core>2.17.2</log4j.core>
+        <testng.version>6.1.1</testng.version>
     </properties>
 
     <dependencies>
@@ -87,6 +88,11 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
             <version>${log4j.core}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${testng.version}</version>
         </dependency>
     </dependencies>
     <build>
