Added docker support and modified the Readme file

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option (LESS TO MORE)-> (OFF,ERROR,WARN,INFO,DEBUG,TRACE,ALL)
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=INFO, stdout, file
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -7,3 +7,11 @@ log4j.appender.stdout.layout.ConversionPattern=[%p] %d{ISO8601} %c{1}: %m%n
 
 # mitigate log4j vulnerability: https://blog.cloudflare.com/inside-the-log4j2-vulnerability-cve-2021-44228/
 log4j2.formatMsgNoLookups=true
+
+# Redirect log messages to a log file, support file rolling.
+log4j.appender.file=org.apache.log4j.RollingFileAppender
+log4j.appender.file.File=./application-log.log
+log4j.appender.file.MaxFileSize=5MB
+log4j.appender.file.MaxBackupIndex=10
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
